# satellite_image_classifier

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: config.py  satellite_image_classifier.ipynb
