[project]
name = "satellite_image_classifier"
version = "0.1.0"
description = "Kaggle Competition: https://www.kaggle.com/datasets/mahmoudreda55/satellite-image-classification?resource=download"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Ida Chak", email = "ida-chak@hotmail.com"}
]
dependencies = {file = ["requirements.txt"]}
